--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
   <body>
     <div class="flex-container">
       <div style="width: 25vw; padding: 30px">
-        <h1 style="font-size: 20px">Hollow Objects - G10</h1>
+        <h1 style="font-size: 20px">Articulated Model - G10</h1>
         <div>
           <div class="inline-flex">
             <p>Color:</p>
