fix some bug and setup shader for draw

--- a/src/index.html
+++ b/src/index.html
@@ -18,12 +18,21 @@
     <script src="Math/Matrix.js" defer></script>
     <script src="Math/Vector.js" defer></script>
 
+    <!-- Shader -->
+    <script src="Shaders/fragment_shader.glsl.js" defer></script>
+    <script src="Shaders/vertex_shader.glsl.js" defer></script>
+
     <!-- Utils -->
     <script src="Utils/webgl-utils.js" defer></script>
     <script src="Utils/MainObj.js" defer></script>
     <script src="Utils/RecursionObject.js" defer></script>
     <script src="Utils/Render.js" defer></script>
     <script src="Utils/Textures.js" defer></script>
+    <script src="Utils/Handlers.js" defer></script>
+    <script src="Utils/ObjectUtils.js" defer></script>
+    <script src="Utils/Shader.js" defer></script>
+    <script src="Utils/Buffer.js" defer></script>
+
 
     <!-- Main -->
     <script src="script.js" defer></script>
