feat: draw 1 component

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,7 @@
     <script src="Utils/ObjectUtils.js" defer></script>
     <script src="Utils/Shader.js" defer></script>
     <script src="Utils/Buffer.js" defer></script>
+    <script src="Utils/draw.js" defer></script>
 
 
     <!-- Main -->
@@ -39,7 +40,7 @@
   </head>
 
   <body>
-    <h1 style="font-size: 35px">Hollow Objects - G10</h1>
+    <h1 style="font-size: 35px">Articulated Model - G10</h1>
     <div class="flex-container">
       <div class="left-container">
   
