add setup for load file

--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,8 @@
           <div>
             <!-- <div class="tree-display" id="tree-display">
             </div> -->
-            <canvas id="canvas-tree" width="600px" height="450px"></canvas>
+            <!-- <canvas id="canvas-tree" width="600px" height="450px"></canvas> -->
+            <div class="tree-display" id="tree-display"></div>
             <h1 style="font-size: 20px">Tree Object Canvas</h1>
           </div>
   
