--- a/src/index.html
+++ b/src/index.html
@@ -51,10 +51,9 @@
       <div class="right-container">
         <div class="object-columns">
           <div>
-            <!-- <div class="tree-display" id="tree-display">
-            </div> -->
-            <!-- <canvas id="canvas-tree" width="600px" height="450px"></canvas> -->
             <div class="tree-display" id="tree-display"></div>
+            <!-- <canvas id="canvas-tree" width="600px" height="450px"></canvas> -->
+            <!-- <div class="tree-display" id="tree-display"></div> -->
             <h1 style="font-size: 20px">Tree Object Canvas</h1>
           </div>
   
