feat : save model

--- a/src/index.html
+++ b/src/index.html
@@ -69,6 +69,9 @@
         <input type="file" id="load-file" accept=".json"/>
         Load File
       </label>
+      <button id="saveBtn">
+        Save
+      </button>
       <div class="shading">
         <label for="shading">Shading: </label>
         <input
